--- a/CSS/main.css
+++ b/CSS/main.css
@@ -3,6 +3,7 @@
     --clr-secondary: #394555;
     --clr-accent: #4688ff;
     --clr-white: #ffffff;
+    --clr-grey: #f1f1f1;
     --clr-black: #000;
 
     --font-family: 'Roboto', sans-serif;
@@ -13,11 +14,13 @@
     --font-size-md: 25px;
     --font-size-lg: 30px;
     --font-size-xl: 50px;
+    --font-size-sp: 80px;
 
     --font-weight-300: 300;
     --font-weight-400: 400;
     --font-weight-500: 500;
-    --font-weight-700: 700:
+    --font-weight-700: 700;
+    --font-weight-900: 900;
 }
 
 
@@ -470,7 +473,7 @@ input:focus:focus-visible:focus-within:active {
 
 .register-wrapper h3 {
     font-size: var(--font-size-lg);
-    font-weight: var(--font-weight-700);
+    font-weight: var(--font-weight-500);
     margin-bottom: 20px;
 }
 
@@ -481,7 +484,7 @@ input:focus:focus-visible:focus-within:active {
 
 .register-wrapper button {
     font-size: var(--font-size-rg);
-    font-weight: var(--font-weight-700);
+    font-weight: var(--font-weight-500);
     color: var(--clr-white);
     background-color: var(--clr-primary);
     padding: 8px 55px;
@@ -523,7 +526,7 @@ input:focus:focus-visible:focus-within:active {
     margin: 55px 0 0 70px;
     color: var(--clr-primary);
     font-size: var(--font-size-md);
-    font-weight: var(--font-weight-700);
+    font-weight: var(--font-weight-500);
 }
 
 
@@ -551,7 +554,7 @@ input:focus:focus-visible:focus-within:active {
 .text-bubble h2 {
     text-decoration: underline;
     font-size: var(--font-size-rg);
-    font-weight: var(--font-weight-700);
+    font-weight: var(--font-weight-500);
     margin-bottom: 8px;
 }
 
@@ -571,7 +574,7 @@ input:focus:focus-visible:focus-within:active {
 .carousel-section-container h2 {
     text-align: center;
     font-size: var(--font-size-lg);
-    font-weight: var(--font-weight-700);
+    font-weight: var(--font-weight-500);
 }
 
 .carousel-wrapper {
@@ -610,7 +613,7 @@ input:focus:focus-visible:focus-within:active {
     margin-block: 15px;
     color: var(--clr-white);
     font-size: var(--font-size-rg);
-    font-weight: var(--font-weight-700);
+    font-weight: var(--font-weight-500);
 }
 
 .news p {
@@ -666,11 +669,11 @@ input:focus:focus-visible:focus-within:active {
     margin-top: 30px;
 }
 
-/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 
                         Contact US Page
 
-+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 
 .contact {
     color: var(--clr-primary);
@@ -746,6 +749,58 @@ input:focus:focus-visible:focus-within:active {
 .main-info p {
     padding-left: 100px;
     font-size: var(--font-size-rg);
+    font-weight: var(--font-weight-500);
+}
+
+
+/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+
+                                404 PAGE
+
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+
+.four-o-four-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 100vh;
+    overflow: hidden;
+    background-color: var(--clr-grey);
+}
+
+.sad-wrapper {
+    width: 250px;
+    height: 220px;
+}
+
+.sad-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.four-content h1 {
+    font-size: var(--font-size-sp);
     font-weight: var(--font-weight-700);
+    color: rgb(121, 121, 121);
+}
+
+.four-content p:nth-of-type(1) {
+    font-size: var(--font-size-md);
+    color: #a9aaaa;
+}
+
+.four-content p {
+    font-size: var(--font-size-sm);
+    color: var(--clr-secondary);
+    margin-bottom: 10px;
+}
+
+.four-content a {
+    display: inline-block;
+    font-size: var(--font-size-rg);
+    color: var(--clr-accent);
 }
 
