--- a/CSS/main.css
+++ b/CSS/main.css
@@ -763,13 +763,13 @@ input:focus:focus-visible:focus-within:active {
 }
 
 
-.image-wrapper {
+.image-wrap {
     position: relative;
     width: 100%;
     height: 500px;
 }
 
-.image-wrapper > h1 {
+.image-wrap > h1 {
     position: absolute;
     inset: 80% 0 0 50%;
     transform: translateX(-20%);
