--- a/CSS/main.css
+++ b/CSS/main.css
@@ -283,7 +283,7 @@ input:focus:focus-visible:focus-within:active {
         width: 40px;
         height: 40px;
         opacity: 0;
-        z-index: 4; /* puts the class above the hamburger-wrapper class*/
+        z-index: 4; /* puts the checkbox above the hamburger-wrapper div*/
     }
 
     .hamburger-wrapper {
@@ -321,7 +321,7 @@ input:focus:focus-visible:focus-within:active {
         width: 100%;
         height: 4px;
         background: var(--clr-primary);
-        border-radius: 1px;
+        border-radius: 2px;
     }
     
     .hamburger-wrapper > div::after {
@@ -360,20 +360,20 @@ input:focus:focus-visible:focus-within:active {
 
     .menu {
         position:absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         inset: 0px 0 auto auto;
         width: 90vw;
         height: 40vh;
         padding-left: 20px;
         background-color: var(--clr-secondary);
         opacity: 0.9;
-        border-radius: 5px;
+        border-radius: 10px;
         overflow: hidden;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        /* transform: scale(0, 0); */
-        display: none;
-        transition: all 0.15s ease-in-out;
+        transform: scale(0);
+        transform-origin: top right;
+        transition: all 0.2s ease-in-out;
         z-index: 2;
     }
 
@@ -404,8 +404,7 @@ input:focus:focus-visible:focus-within:active {
     /* =========To show the menu */
 
     .toggler:checked ~ .menu {
-        /* transform: scale(1, 1); */
-        display: flex;
+        transform: scale(1);
     }
 }   
 
@@ -434,6 +433,7 @@ input:focus:focus-visible:focus-within:active {
 .top-bar-container {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     min-height: 120px;
     flex-wrap: wrap;
 }
@@ -465,7 +465,7 @@ input:focus:focus-visible:focus-within:active {
 }
 
 .right-wrapper button:first-of-type:hover {
-    border: 2px solid var(--clr-accent);
+    border: 3px solid var(--clr-accent);
     color: var(--clr-accent);
 }
 
@@ -636,7 +636,7 @@ input:focus:focus-visible:focus-within:active {
 .carousel-wrapper {
     display: grid;
     grid-auto-flow: column;
-    grid-auto-columns: 21%;
+    grid-auto-columns: 280px;
     gap: 25px;
     padding: 20px 0;
     margin-top: 25px;
